30_applications/media/deploy/audiobookshelf_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    app.kubernetes.io/name: audiobookshelf-server
  annotations:
    cert-manager.io/cluster-issuer: ${vals_infra_certManager_issuer}
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "books.${vals_info_cluster_domain}"
      secretName: audiobookshelf-tls
  rules:
    - host: "books.${vals_info_cluster_domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: http
